--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,15 @@
 /node_modules
 /.pnp
 .pnp.js
-package.lock.json
+
 # testing
 /coverage
 
 # production
 /build
 
-# misc
-.DS_Store
+# 
+.DS_Storemisc
 .env.local
 .env.development.local
 .env.test.local
